Add Interdiction Matrix range limit config